CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

ADD_SUBDIRECTORY(stuff)
ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(g2o_cli)

IF(QGLVIEWER_FOUND)
  ADD_SUBDIRECTORY(g2o_viewer)
ENDIF(QGLVIEWER_FOUND)

ADD_SUBDIRECTORY(math_groups)

# Pre-canned types
ADD_SUBDIRECTORY(types_slam2d)
ADD_SUBDIRECTORY(types_slam3d)
ADD_SUBDIRECTORY(types_sba)
ADD_SUBDIRECTORY(types_sim3)
ADD_SUBDIRECTORY(types_icp)

# Solvers
ADD_SUBDIRECTORY(solver_pcg)

ADD_SUBDIRECTORY(solver_csparse)

IF(CHOLMOD_FOUND )
  ADD_SUBDIRECTORY(solver_cholmod)
ENDIF(CHOLMOD_FOUND)

# Examples
ADD_SUBDIRECTORY(examples)

# Tutorials
ADD_SUBDIRECTORY(tutorials)
