ADD_LIBRARY(math_groups SHARED
  se3quat_gradients.cpp
)

SET_TARGET_PROPERTIES(math_groups PROPERTIES OUTPUT_NAME ${LIB_PREFIX}math_groups)

TARGET_LINK_LIBRARIES(math_groups m)

#INSTALL(TARGETS math_groups
#  RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
#  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
#  ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
#)
