ADD_LIBRARY(math_groups SHARED
  se3quat_gradients.cpp
)

SET_TARGET_PROPERTIES(math_groups PROPERTIES OUTPUT_NAME ${LIB_PREFIX}math_groups)

IF (NOT MSVC)
TARGET_LINK_LIBRARIES(math_groups m)
ENDIF()

INSTALL(TARGETS math_groups
  RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
  ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
)

FILE(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")

INSTALL(FILES ${headers} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/g2o/math_groups)
