ADD_LIBRARY(solver_pcg SHARED
  solver_pcg.cpp
)

SET_TARGET_PROPERTIES(solver_pcg PROPERTIES OUTPUT_NAME ${LIB_PREFIX}solver_pcg)

TARGET_LINK_LIBRARIES(solver_pcg core)

#INSTALL(TARGETS solver_pcg
#  RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
#  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
#  ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
#)
