ADD_LIBRARY(g2o_cli_library SHARED
  dl_wrapper.cpp
  output_helper.cpp
  g2o_common.cpp
)

SET_TARGET_PROPERTIES(g2o_cli_library PROPERTIES OUTPUT_NAME ${LIB_PREFIX}g2o_cli)

SET_PROPERTY(TARGET g2o_cli_library APPEND PROPERTY COMPILE_DEFINITIONS G2O_DEFAULT_TYPES_DIR_="${CMAKE_LIBRARY_OUTPUT_DIRECTORY}" G2O_DEFAULT_SOLVER_DIR_="${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")

TARGET_LINK_LIBRARIES(g2o_cli_library core)
IF(UNIX)
  TARGET_LINK_LIBRARIES(g2o_cli_library dl)
ENDIF(UNIX)

IF(CMAKE_BUILD_TYPE MATCHES Debug)
  SET_PROPERTY(TARGET g2o_cli_library APPEND PROPERTY COMPILE_DEFINITIONS G2O_LIBRARY_POSTFIX="${CMAKE_DEBUG_POSTFIX}")
ENDIF(CMAKE_BUILD_TYPE MATCHES Debug)
IF(CMAKE_BUILD_TYPE MATCHES Release)
  SET_PROPERTY(TARGET g2o_cli_library APPEND PROPERTY COMPILE_DEFINITIONS G2O_LIBRARY_POSTFIX="${CMAKE_RELEASE_POSTFIX}")
ENDIF(CMAKE_BUILD_TYPE MATCHES Release)
IF(CMAKE_BUILD_TYPE MATCHES RelWithDebInfo)
  SET_PROPERTY(TARGET g2o_cli_library APPEND PROPERTY COMPILE_DEFINITIONS G2O_LIBRARY_POSTFIX="${CMAKE_RELWITHDEBINFO_POSTFIX}")
ENDIF(CMAKE_BUILD_TYPE MATCHES RelWithDebInfo)
IF(CMAKE_BUILD_TYPE MATCHES MinSizeRel)
  SET_PROPERTY(TARGET g2o_cli_library APPEND PROPERTY COMPILE_DEFINITIONS G2O_LIBRARY_POSTFIX="${CMAKE_MINSIZEREL_POSTFIX}")
ENDIF(CMAKE_BUILD_TYPE MATCHES MinSizeRel)

ADD_EXECUTABLE(g2o_cli_application
  g2o.cpp)

TARGET_LINK_LIBRARIES(g2o_cli_application g2o_cli_library)

SET_TARGET_PROPERTIES(g2o_cli_application PROPERTIES OUTPUT_NAME g2o)

INSTALL(TARGETS g2o_cli_library g2o_cli_application
  RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
  ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
)

INSTALL(FILES dl_wrapper.h output_helper.h g2o_common.h DESTINATION ${CMAKE_INSTALL_PREFIX}/include/g2o/g2o_cli)
